ci/test/envoy/test_gateway_rds_response.yaml
version_info: 'dummy'
type_url: type.googleapis.com/envoy.config.route.v3.RouteConfiguration
control_plane:
  identifier: ci
resources:
- '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
  name: https_routes
  request_headers_to_add:
  - append_action: OVERWRITE_IF_EXISTS_OR_ADD
    header:
      key: X-Real-IP
      value: '%DOWNSTREAM_REMOTE_ADDRESS%'
  virtual_hosts:
    - '@type': type.googleapis.com/envoy.config.route.v3.VirtualHost
      domains:
      - foo.hail.is
      name: foo
      routes:
      - match:
          prefix: /metrics
        route:
          append_x_forwarded_host: true
          auto_host_rewrite: true
          cluster: foo
          timeout: 0s
        typed_per_filter_config:
          envoy.filters.http.local_ratelimit:
            '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            filter_enabled:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            filter_enforced:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            stat_prefix: http_local_rate_limiter
            token_bucket:
              fill_interval: 1s
              max_tokens: 200
              tokens_per_fill: 200
      - match:
          prefix: /
        route:
          append_x_forwarded_host: true
          auto_host_rewrite: true
          cluster: foo
          timeout: 0s
        typed_per_filter_config:
          envoy.filters.http.ext_authz:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
            disabled: true
          envoy.filters.http.local_ratelimit:
            '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            filter_enabled:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            filter_enforced:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            stat_prefix: http_local_rate_limiter
            token_bucket:
              fill_interval: 1s
              max_tokens: 200
              tokens_per_fill: 200
    - '@type': type.googleapis.com/envoy.config.route.v3.VirtualHost
      domains:
      - www.hail.is
      - hail.is
      name: www
      routes:
      - match:
          prefix: /metrics
        route:
          append_x_forwarded_host: true
          auto_host_rewrite: true
          cluster: www
          timeout: 0s
        typed_per_filter_config:
          envoy.filters.http.local_ratelimit:
            '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            filter_enabled:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            filter_enforced:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            stat_prefix: http_local_rate_limiter
            token_bucket:
              fill_interval: 1s
              max_tokens: 200
              tokens_per_fill: 200
      - match:
          prefix: /
        route:
          append_x_forwarded_host: true
          auto_host_rewrite: true
          cluster: www
          timeout: 0s
        typed_per_filter_config:
          envoy.filters.http.ext_authz:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
            disabled: true
          envoy.filters.http.local_ratelimit:
            '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            filter_enabled:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            filter_enforced:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            stat_prefix: http_local_rate_limiter
            token_bucket:
              fill_interval: 1s
              max_tokens: 200
              tokens_per_fill: 200
    - '@type': type.googleapis.com/envoy.config.route.v3.VirtualHost
      domains:
      - internal.hail.is
      name: internal
      routes:
      - match:
          path_separated_prefix: /test/bar
        route:
          append_x_forwarded_host: true
          auto_host_rewrite: true
          cluster: test-bar
          timeout: 0s
        typed_per_filter_config:
          envoy.filters.http.local_ratelimit:
            '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            filter_enabled:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            filter_enforced:
              default_value:
                denominator: HUNDRED
                numerator: 100
              runtime_key: local_rate_limit_enabled
            stat_prefix: http_local_rate_limiter
            token_bucket:
              fill_interval: 1s
              max_tokens: 33
              tokens_per_fill: 33
