ci/test/envoy/test_internal_gateway_cds_response.yaml
version_info: 'dummy'
type_url: type.googleapis.com/envoy.config.cluster.v3.Cluster
control_plane:
  identifier: ci
resources:
  - '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: foo
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    load_assignment:
      cluster_name: foo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: foo.default.svc.cluster.local
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /ssl-config/internal-gateway-cert.pem
            private_key:
              filename: /ssl-config/internal-gateway-key.pem
        validation_context:
          filename: /ssl-config/internal-gateway-outgoing.pem
  - '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: test-bar
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    load_assignment:
      cluster_name: test-bar
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: bar.test.svc.cluster.local
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates: []
        validation_context:
          trust_chain_verification: ACCEPT_UNTRUSTED
